Bug 395725, Crash [@ nsIFrame::GetFrameSelection], r+sr+a=roc